fix navmobile appearing on desktop, fix hero on mobile

--- a/components/Hero.module.css
+++ b/components/Hero.module.css
@@ -42,7 +42,7 @@
 }
 
 .pitch {
-  font-size: 3rem;
+  font-size: 3em;
   font-weight: 600;
   max-width: 1200px;
   margin: 1em auto;
@@ -56,10 +56,10 @@
 }
 
 .quote {
-  padding: 2rem;
+  padding: 2em;
   max-width: 40em;
   background-color: rgba(0, 0, 0, 0.5);
-  border-radius: 1rem;
+  border-radius: 1em;
   text-align: right;
 
   display: flex;
@@ -71,12 +71,12 @@
   transition-delay: 0s;
 }
 .quoteSnippet {
-  font-size: 1.2rem;
+  font-size: 1.2em;
   font-style: italic;
 }
 .quoteAuthor {
-  font-size: 1rem;
-  margin-top: 1rem;
+  font-size: 1em;
+  margin-top: 1em;
   align-self: flex-end;
 }
 .quoteAuthor a {
@@ -94,10 +94,10 @@
 }
 
 @media (max-width: 600px) {
-  .hero {
-    height: 20rem;
-  }
   .content {
-    font-size: 1rem;
+    font-size: 0.8em;
+  }
+  .quote {
+    display: none;
   }
 }
